<resources>

    <string name="app_name">What\'s Shaking, NZ?</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_about">About</string>
    <string name="menu_licenses">Open Source licenses</string>
    <string name="title_activity_main">What\'s Shaking, NZ?</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_quake">Quake</string>
    <string name="no_quakes">No quakes found!</string>

    <!-- Quake Detail Page Items -->
    <string name="magnitude_heading_text">MAGNITUDE</string>
    <string name="depth_heading_text">DEPTH</string>
    <string name="date_heading_text">DATE</string>
    <string name="status_heading_text">STATUS</string>
    
    <string name="depth_detail">%s km</string>

    <string name="earthquake_status_automatic">An automatic earthquake location that has not been reviewed by a duty officer or analyst.</string>
    <string name="earthquake_status_deleted">Oops! This was not a real earthquake and has been deleted.</string>
    <string name="earthquake_status_duplicate">This earthquake location is a duplicate of another one.</string>
    <string name="earthquake_status_reviewed">This earthquake has been reviewed and confirmed by a duty officer or analyst.</string>
    <string name="earthquake_status_unknown">We don\'t know what this status means! :(</string>

    <!-- Notification Items -->
    <string name="notifications_tickerSingleQuake">New quake - magnitude %s</string>
    <string name="notifications_titleSingleQuake">%s magnitude quake found</string>
    <string name="notifications_tickerMultiQuake">%s new quakes</string>
    <string name="notifications_titleMultiQuake">%s new quakes found</string>

    <!-- Preference Page Items -->
    <string name="pref_minDisplayMagnitude">Display Threshold</string>
    <string name="pref_minDisplayMagnitude_summ">Displaying quakes above magnitude: %s</string>
    <string name="pref_minHighlightMagnitude">Notification Threshold</string>
    <string name="pref_minHighlightMagnitude_summ">Notifications and highlighting for quakes above magnitude: %s
    </string>
    <string name="pref_maxNumQuakesToShow">Max Number of Quakes</string>
    <string name="pref_maxNumQuakesToShow_summ">Showing up to %s quakes (limited to 30 by Geonet)</string>
    <string name="pref_allowBackgroundNotifications">Background notifications</string>
    <string name="pref_allowBackgroundNotifications_summ">Enables background notifications for quakes.</string>
    <string name="pref_backgroundNotificationsFrequency">Update Frequency</string>
    <string name="pref_backgroundNotificationsFrequency_default">60</string>
    <string name="pref_backgroundNotificationsFrequency_summ_mins">Checking for new quakes every %s minutes</string>
    <string name="pref_backgroundNotificationsFrequency_summ_hours">Checking for new quakes every %s hours</string>
    <string name="pref_backgroundNotificationsEnabled">Background checks enabled.</string>
    <string name="pref_backgroundNotificationsDisabled">Background checks disabled.</string>
    <string name="pref_backgroundNotificationsSound">Notification Sound</string>
    <string name="pref_backgroundNotificationsVibrate">Notification Vibration</string>
    <string name="pref_backgroundNotificationsLight">Notification Light</string>
    <string name="pref_backgroundNotificationsReviewed">Reviewed Quakes Only?</string>
    <string name="pref_backgroundNotificationsReviewed_summ">Will only notify you about quakes that
        have been reviewed by a Geonet staff member.
    </string>

    <!-- About Page Items -->
    <string name="about_app_detail">What\'s Shaking, NZ? uses the Geonet.org.nz data feed
        to provide you with up to date information about the latest earthquakes around New Zealand.
        \n\nPlease tweet (@WhatsShakingNZ) or email (android-support@speakman.net.nz) me with any problems
        you find or suggestions for features you\'d like to see in the next version.
        \n\nWhat\'s Shaking, NZ? is an open source application. You can find the source code on Github
        at:\nhttps://github.com/adamsp/wsnz-android
        \n\nFor news and more information, check out the What\'s Shaking, NZ? website:\nwww.whatsshaking.co.nz
    </string>
    <string name="about_app_heading">The App</string>
    <string name="about_app_update_1_3_heading">Update 1.3</string>
    <string name="about_app_update_1_3_detail">- Added a homescreen widget\n
        - Added an open source licenses page
    </string>
    <string name="about_app_update_1_2_heading">Update 1.2</string>
    <string name="about_app_update_1_2_detail">- Added tablet support\n
        - Added landscape support\n
        - Added a message explaining what an earthquakes \'status\' means\n
        - Added an option to only notify about \'reviewed\' quakes (turned on by default)\n
        - Updated UI with Roboto font and better spacing for list items\n
        - Updated default preferences to some better values\n
        - Updated earthquake map markers to have a gradual colour change, rather than the red &amp; blue from before\n
        - Upgraded to Google Maps v2\n
        - Fixed a bug where notifications would sometimes show up even when disabled
    </string>
    <string name="about_app_update_1_1_heading">Update 1.1</string>
    <string name="about_app_update_1_1_detail">- Fixed the background check service crashing when no
        internet connection is available\n
        - Fixed application crashing if it receives data from Geonet in an unexpected format\n
        - Fixed possible crash for alternate locale number formats\n
        - Changed default map zoom level for devices with high resolution screens\n
        - Added a \'status\' value to quakes - this indicates whether the quake has been reviewed
        by a human, or has been automatically calculated by the computer. Reviewed quakes are
        reliable, automatic ones are not.
    </string>

    <string name="tab_title_list">List</string>
    <string name="tab_title_map">Map</string>
    
    <!-- Widget strings -->
    <string name="widget_label">What\'s Shaking, NZ?</string>
    <string name="widget_heading">LATEST EARTHQUAKE</string>
    <string name="widget_loading">Loading...</string>
    <string name="widget_background_service_not_enabled_message">Automatic updates not enabled. Tap here to turn on.</string>

</resources>
