<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/AboutActivityFont.Heading"
            android:text="@string/about_app_heading"/>

        <TextView
            style="@style/AboutActivityFont.Detail"
            android:autoLink="all"
            android:text="@string/about_app_detail"
            tools:context=".AboutActivity"/>
        
        <TextView
            style="@style/AboutActivityFont.Heading"
            android:text="@string/about_app_update_1_3_heading"/>

        <TextView
            style="@style/AboutActivityFont.Detail"
            android:autoLink="all"
            android:text="@string/about_app_update_1_3_detail"
            tools:context=".AboutActivity"/>

        <TextView
            style="@style/AboutActivityFont.Heading"
            android:text="@string/about_app_update_1_2_heading"/>

        <TextView
            style="@style/AboutActivityFont.Detail"
            android:autoLink="all"
            android:text="@string/about_app_update_1_2_detail"
            tools:context=".AboutActivity"/>

        <TextView
            style="@style/AboutActivityFont.Heading"
            android:text="@string/about_app_update_1_1_heading"/>

        <TextView
            style="@style/AboutActivityFont.Detail"
            android:autoLink="all"
            android:text="@string/about_app_update_1_1_detail"
            tools:context=".AboutActivity"/>
    </LinearLayout>

</ScrollView>