<?xml version="1.0" encoding="utf-8"?>

<speakman.whatsshakingnz.views.AnimatingLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="invisible"
    android:id="@+id/earthquake_details_animating_overlay"
    android:background="@drawable/card_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <speakman.whatsshakingnz.views.TypefacedTextView
            style="@style/DetailOverlayFont.Heading.Weighted"
            android:text="@string/magnitude_heading_text"/>

        <speakman.whatsshakingnz.views.TypefacedTextView
            style="@style/DetailOverlayFont.Heading.Weighted"
            android:text="@string/depth_heading_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <speakman.whatsshakingnz.views.TypefacedTextView
            android:id="@+id/magnitude_detail_field"
            style="@style/DetailOverlayFont.Detail.Weighted"/>

        <speakman.whatsshakingnz.views.TypefacedTextView
            android:id="@+id/depth_detail_field"
            style="@style/DetailOverlayFont.Detail.Weighted"/>
    </LinearLayout>

    <speakman.whatsshakingnz.views.TypefacedTextView
        style="@style/DetailOverlayFont.Heading"
        android:text="@string/date_heading_text"/>

    <speakman.whatsshakingnz.views.TypefacedTextView
        android:id="@+id/date_detail_field"
        style="@style/DetailOverlayFont.Detail"/>

    <speakman.whatsshakingnz.views.TypefacedTextView
        style="@style/DetailOverlayFont.Heading"
        android:text="@string/status_heading_text"/>

    <speakman.whatsshakingnz.views.TypefacedTextView
        android:id="@+id/status_detail_field"
        style="@style/DetailOverlayFont.Detail"/>

</speakman.whatsshakingnz.views.AnimatingLinearLayout>