<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_detail_parent_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/widget_margin"
    android:background="@drawable/card_background"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/widget_padding" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/WidgetFont.Heading"
            android:text="@string/widget_heading" />

        <TextView
            android:id="@+id/widget_detail_latest_datetime"
            style="@style/WidgetFont.Detail"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/widget_loading" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                style="@style/WidgetFont.Heading"
                android:text="@string/magnitude_heading_text" />

            <TextView
                android:id="@+id/widget_detail_latest_magnitude"
                style="@style/WidgetFont.Detail"
                android:text="@string/widget_loading" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                style="@style/WidgetFont.Heading"
                android:text="@string/depth_heading_text" />

            <TextView
                android:id="@+id/widget_detail_latest_depth"
                style="@style/WidgetFont.Detail"
                android:text="@string/widget_loading" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>