<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/detail_fragment_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <speakman.whatsshakingnz.views.TypefacedTextView
            style="@style/EarthquakeDetailFragmentFont.Heading.Weighted"
            android:text="@string/magnitude_heading_text"/>

        <speakman.whatsshakingnz.views.TypefacedTextView
            style="@style/EarthquakeDetailFragmentFont.Heading.Weighted"
            android:text="@string/depth_heading_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <speakman.whatsshakingnz.views.TypefacedTextView
            android:id="@+id/magnitude_detail_field"
            style="@style/EarthquakeDetailFragmentFont.Detail.Weighted"/>

        <speakman.whatsshakingnz.views.TypefacedTextView
            android:id="@+id/depth_detail_field"
            style="@style/EarthquakeDetailFragmentFont.Detail.Weighted"/>
    </LinearLayout>

    <speakman.whatsshakingnz.views.TypefacedTextView
        style="@style/EarthquakeDetailFragmentFont.Heading"
        android:text="@string/date_heading_text"/>

    <speakman.whatsshakingnz.views.TypefacedTextView
        android:id="@+id/date_detail_field"
        style="@style/EarthquakeDetailFragmentFont.Detail"/>

    <speakman.whatsshakingnz.views.TypefacedTextView
        style="@style/EarthquakeDetailFragmentFont.Heading"
        android:text="@string/status_heading_text"/>

    <RelativeLayout
        android:id="@+id/status_detail_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <speakman.whatsshakingnz.views.TypefacedTextView
            android:id="@+id/status_detail_field"
            style="@style/EarthquakeDetailFragmentFont.Detail"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/status_help_button"
            android:layout_alignParentLeft="true"/>

        <ImageView
            android:id="@id/status_help_button"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_menu_help"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/status_detail_field"/>

    </RelativeLayout>

</LinearLayout>